--- a/Back/src/Proev.API/appsettings.Development.json
+++ b/Back/src/Proev.API/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Default": "Data Source=Proev.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
